# popout3d

./: Popout3D.desktop  README.md  meson.build  output3-36fails  popout3d  popout3d.1  popout3d.desktop  popout3d.glade  popout3d.in  popout3d.wrapper  popout3d_1.5.0-1.dsc  popout3d_1.5.0-1_source.build  popout3d_1.5.0-1_source.buildinfo  popout3d_1.5.0-1_source.changes  popout3d_1.5.0_all.deb  popout3d_1.5.0_amd64.deb  popout3d_spawn  popout3d_spawn.py  setup.py
debian/: SOURCES.txt  changelog  control  copyright  files  popout3d.desktop  popout3d.substvars  watch
debian/popout3d/DEBIAN/: control  md5sums
debian/popout3d/usr/share/doc/popout3d/: copyright
debian/popout3d/usr/share/popout3d/: popout3d.glade  popout3d_spawn
debian/source/scripts/: popout3d.py  popout3d_spawn.py
debian/upstream/: metadata  signing-key.asc
popout3d.egg-info/: PKG-INFO  SOURCES.txt
snap/: snapcraft.yaml
usr/share/popout3d/: popout3d.glade  popout3d.py  popout3d_spawn.py
